# users-service

./: .dockerignore  .gitignore  Dockerfile  README.md  buzzstation-users-service.cabal  task.json  wercker.yml
app/: Main.hs
server/: users-service.cabal
server/src/: App.hs  Main.hs  PasswordManager.hs
server/src/Database/: UserManager.hs
server/src/Helpers/: Config.hs  Database.hs  Status.hs
server/src/Models/: DatabaseUser.hs  User.hs
server/src/Models/Errors/: Code.hs  Response.hs
server/src/Services/: TokenService.hs
server/src/Validators/: EmailValidator.hs  PasswordValidator.hs  UserValidator.hs
server/test/: AppSpec.hs  PasswordManagerSpec.hs  Spec.hs
server/test/Helpers/: DatabaseTest.hs  Matcher.hs
server/test/Integration/: AppSpec.hs
server/test/Integration/App/: AuthenticateSpec.hs  ConfirmUserSpec.hs  EditUserSpec.hs  UserSpec.hs
server/test/Integration/Validators/: UserValidatorSpec.hs
server/test/Unit/Validators/: EmailValidatorSpec.hs  PasswordValidatorSpec.hs
src/Database/: UserManager.hs
src/Helpers/: Config.hs  Database.hs
src/Models/: User.hs
src/Models/Errors/: Response.hs
src/Services/: TokenService.hs
src/Validators/: EmailValidator.hs  PasswordValidator.hs
test/Integration/App/: ConfirmUserSpec.hs  EditUserSpec.hs  UserSpec.hs
