name:                buzzstation-users-service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/buzzstation-users-service#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Database.UserManager
                     , Helpers.Config
                     , Helpers.Database
                     , Helpers.Status
                     , Services.TokenService
                     , Validators.UserValidator
                     , Validators.PasswordValidator
                     , Validators.EmailValidator
                     , Models.User
                     , Models.Errors.Response
                     , Models.Errors.Code
                     , Models.DatabaseUser

  build-depends:       aeson
                     , base >=4.7 && <5
                     , bytestring
                     , bson
                     , email-validate
                     , jwt
                     , http-types
                     , containers
                     , mongoDB == 2.0.10
                     , pwstore-fast
                     , random
                     , wai-extra
                     , scotty
                     , time
                     , split
                     , transformers
                     , text
                     , utf8-string

  default-language:    Haskell2010

executable buzzstation-users-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
                     , text
                     , buzzstation-users-service
  default-language:    Haskell2010

test-suite buzzstation-users-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       async
                     , aeson
                     , base
                     , bytestring
                     , data-default-class
                     , directory
                     , hspec == 2.*
                     , hspec-wai >= 0.6.3
                     , hspec-wai-json >= 0.6.1
                     , http-types
                     , lifted-base
                     , mongoDB == 2.0.10
                     , network
                     , random
                     , regex-posix
                     , scotty
                     , text
                     , wai
                     , wai-extra
                     , buzzstation-users-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/buzzstation-users-service
